--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tyler Mitton</title>
-    <meta name="description" content="Creative Designer & Visual Storyteller - Portfolio showcasing branding, UI/UX, and visual communication projects" />
+    <meta name="description" content="Personal Portfolio" />
     <meta name="author" content="Tyler Mitton" />
 
     <meta property="og:title" content="Tyler Mitton" />
-    <meta property="og:description" content="Portfolio showcasing projects" />
+    <meta property="og:description" content="Portfolio Website" />
+    <meta property="og:url" content="https://fireflame135.github.io/TylerMitton/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/WebsiteOGImage.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <!-- Prevent flash of unstyled content by setting dark class early -->
+
     <script>
       (function() {
         const theme = localStorage.getItem('theme');
