fixed link to previous

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Portfolio Website" />
     <meta property="og:url" content="https://fireflame135.github.io/TylerMitton/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/WebsiteOGImage.png" />
+    <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/WebsiteOGImage.jpg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
