--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
+    <link rel="preload" as="image" href="/assets/Professional%20Headshot.avif" type="image/avif" />
+
     <script>
       (function() {
         const theme = localStorage.getItem('theme');
