--- a/index.html
+++ b/index.html
@@ -13,24 +13,23 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/WebsiteOGImage.jpg" />
 
+    <link rel="preload" as="image" href="/assets/Professional_Headshot-97kb.avif" type="image/avif" />
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <link rel="preload" as="image" href="/assets/ProfessionalHeadshot.avif" type="image/avif" />
 
     <script>
-      (function() {
-        const theme = localStorage.getItem('theme');
-        // If no stored theme, respect OS setting
-        if (theme === 'dark' || (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-          document.documentElement.classList.add('dark');
-        } else {
-          document.documentElement.classList.remove('dark');
-        }
+      (function () {
+        const theme = localStorage.getItem('theme') ||
+          (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+        document.documentElement.classList.toggle('dark', theme === 'dark');
       })();
     </script>
+
   </head>
 
   <body>
