added mobile support for maze game

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/WebsiteOGImage.jpg" />
 
-    <link rel="preload" as="image" href="/assets/Professional_Headshot-97kb.avif" type="image/avif" />
+    <!-- <link rel="preload" as="image" href="/assets/Professional_Headshot-97kb.avif" type="image/avif" /> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
