--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <title>Tyler Mitton</title>
     <meta name="description" content="Personal Portfolio" />
     <meta name="author" content="Tyler Mitton" />
+    <meta name="keywords" content="Tyler Mitton, Portfolio, Web Developer, Designer, information systems, Vite, React, TypeScript, Tailwind CSS">
 
     <meta property="og:title" content="Tyler Mitton" />
     <meta property="og:description" content="Portfolio Website" />
     <meta property="og:url" content="https://fireflame135.github.io/TylerMitton/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/WebsiteOGImage.jpg" />
+    <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/assets/WebsiteOGImage.jpg" />
 
     <!-- <link rel="preload" as="image" href="/assets/Professional_Headshot-97kb.avif" type="image/avif" /> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
 
     <script>
       (function () {
