--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Tyler Mitton" />
     <meta name="keywords" content="Tyler Mitton, Portfolio, Web Developer, Designer, information systems, Vite, React, TypeScript, Tailwind CSS">
 
-    <meta property="og:title" content="Tyler Mitton" />
+    <meta property="og:title" content="Tyler Mitton | Portfolio" />
     <meta property="og:description" content="Portfolio Website" />
     <meta property="og:url" content="https://fireflame135.github.io/TylerMitton/" />
     <meta property="og:type" content="website" />
