Added a custom blog so people don't have to leave my site

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/assets/WebsiteOGImage.jpg" />
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tyler Mitton | Portfolio Website">
+    <meta name="twitter:description" content="A personal portfolio showcasing my design and development work. Built with React, TypeScript, and Tailwind CSS.">
+    <meta name="twitter:image" content="https://fireflame135.github.io/TylerMitton/assets/WebsiteOGImage.jpg">
+
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#E2E4E6">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#18181b">
+
     <!-- <link rel="preload" as="image" href="/assets/Professional_Headshot-97kb.avif" type="image/avif" /> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
