--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="author" content="Tyler Mitton" />
     <meta name="keywords" content="Tyler Mitton, Portfolio, Web Developer, Designer, information systems, Vite, React, TypeScript, Tailwind CSS">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+
     <meta property="og:title" content="Tyler Mitton | Portfolio" />
     <meta property="og:description" content="Portfolio Website" />
     <meta property="og:url" content="https://fireflame135.github.io/TylerMitton/" />
@@ -23,11 +28,6 @@
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#18181b">
 
     <!-- <link rel="preload" as="image" href="/assets/Professional_Headshot-97kb.avif" type="image/avif" /> -->
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
 
     <script>
       (function () {
