Added a linkedin redirect page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta name="author" content="Tyler Mitton" />
     <meta name="keywords" content="Tyler Mitton, Portfolio, Web Developer, Designer, information systems, Vite, React, TypeScript, Tailwind CSS">
 
+    <link rel="preload" href="/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin>
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
+    
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
 
     <meta property="og:title" content="Tyler Mitton | Portfolio" />
