--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <meta name="author" content="Tyler Mitton" />
     <meta name="keywords" content="Tyler Mitton, Portfolio, Web Developer, Designer, information systems, Vite, React, TypeScript, Tailwind CSS">
 
-    <link rel="preconnect" href="https://fireflame135.github.io">
-    <link rel="preload" href="%BASE_URL%fonts/InterVariable.woff2" as="font" type="font/woff2">
-
+    <link rel="preconnect" href="https://fireflame135.github.io" crossorigin>
+    <link rel="preload" href="/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin>
     
     <meta property="og:title" content="Tyler Mitton | Portfolio" />
     <meta property="og:description" content="Portfolio Website" />
