--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tyler Mitton</title>
@@ -26,6 +27,7 @@
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#18181b">
 
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link rel="canonical" href="https://tylermitton.com" />
 
 
     <script>
@@ -34,6 +36,12 @@
           (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
         document.documentElement.classList.toggle('dark', theme === 'dark');
       })();
+    </script>
+    <!-- comment out the section below for only github link: -->
+    <script>
+      if (window.location.hostname === "fireflame135.github.io") {
+        window.location.replace("https://tylermitton.com" + window.location.pathname);
+      }
     </script>
 
   </head>
