--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <meta name="author" content="Tyler Mitton" />
     <meta name="keywords" content="Tyler Mitton, Portfolio, Web Developer, Designer, information systems, Vite, React, TypeScript, Tailwind CSS">
 
-    <link rel="preconnect" href="https://fireflame135.github.io" crossorigin>
-    <link rel="preload" href="/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin>
+    <!-- <link rel="preconnect" href="https://fireflame135.github.io" crossorigin>
+    <link rel="preload" href="/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin> -->
     
     <meta property="og:title" content="Tyler Mitton | Portfolio" />
     <meta property="og:description" content="Portfolio Website" />
-    <meta property="og:url" content="https://fireflame135.github.io/TylerMitton/" />
+    <meta property="og:url" content="https://tylermitton.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://fireflame135.github.io/TylerMitton/assets/WebsiteOGImage.jpg" />
+    <meta property="og:image" content="https://tylermitton.com/assets/WebsiteOGImage.jpg" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tyler Mitton | Portfolio Website">
     <meta name="twitter:description" content="A personal portfolio showcasing my design and development work. Built with React, TypeScript, and Tailwind CSS.">
-    <meta name="twitter:image" content="https://fireflame135.github.io/TylerMitton/assets/WebsiteOGImage.jpg">
+    <meta name="twitter:image" content="https://tylermitton.com/assets/WebsiteOGImage.jpg">
 
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#E2E4E6">
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#18181b">
@@ -36,12 +36,6 @@
           (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
         document.documentElement.classList.toggle('dark', theme === 'dark');
       })();
-    </script>
-    <!-- comment out the section below for only github link: -->
-    <script>
-      if (window.location.hostname === "fireflame135.github.io") {
-        window.location.replace("https://tylermitton.com" + window.location.pathname);
-      }
     </script>
 
   </head>
