--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="Tyler Mitton" />
     <meta name="keywords" content="Tyler Mitton, Portfolio, Web Developer, Designer, information systems, Vite, React, TypeScript, Tailwind CSS">
 
-    <!-- <link rel="preconnect" href="https://fireflame135.github.io" crossorigin>
-    <link rel="preload" href="/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin> -->
+    <link rel="preconnect" href="https://tylermitton.com" crossorigin>
+    <link rel="preload" href="/fonts/InterVariable.woff2" as="font" type="font/woff2" crossorigin>
     
     <meta property="og:title" content="Tyler Mitton | Portfolio" />
     <meta property="og:description" content="Portfolio Website" />
