--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
       })();
     </script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PT2RF25GCQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PT2RF25GCQ');
+    </script>
+
   </head>
 
   <body>
